--- a/.npmignore
+++ b/.npmignore
@@ -1,34 +1,8 @@
-# Source files
 src/
 tsconfig.json
-
-# Development files
+*.tgz
+node_modules/
 .git/
 .gitignore
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS files
+*.log
 .DS_Store
-Thumbs.db
-
-# Test files
-**/*.test.*
-**/*.spec.*
-test/
-tests/
-
-# Build artifacts
-coverage/
-.nyc_output/
-
-# Documentation
-docs/
