--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -15,8 +15,7 @@
     "declaration": true,
     "outDir": "./lib",
     "rootDir": "./src",
-    "jsx": "react-jsx",
-    "noImplicitAny": false
+    "jsx": "react-jsx"
   },
   "include": [
     "src/**/*"
